:bug: fix: Remove horizontal scrollbar

--- a/assets/css/fitness.scss
+++ b/assets/css/fitness.scss
@@ -10,15 +10,14 @@
   .background {
     position: absolute;
     z-index: -1;
-    width: 100vw;
+    width: calc(100% + var(--content-padding) * 2);
     height: 100%;
     background-image: url("../images/bg-fitness.jpg");
     background-position: left;
     background-size: cover;
     background-repeat: no-repeat;
-    left: 0;
+    left: calc(0px - var(--content-padding));
     top: 0;
-    margin-left: calc(0px - var(--content-padding));
 
     &::after {
       content: "";
@@ -26,7 +25,7 @@
       z-index: 0;
       left: 0;
       top: 0;
-      width: 100vw;
+      width: 100%;
       height: 100%;
       background: linear-gradient(
         270deg,
