--- a/assets/css/treningy.css
+++ b/assets/css/treningy.css
@@ -10,15 +10,14 @@
 #rozvrh .background {
   position: absolute;
   z-index: -1;
-  width: 100vw;
+  width: calc(100% + var(--content-padding) * 2);
   height: 100%;
   background-image: url("../images/bg-treningy.jpg");
   background-position: left;
   background-size: 125%;
   background-repeat: no-repeat;
-  left: 0;
+  left: calc(0px - var(--content-padding));
   top: 0;
-  margin-left: calc(0px - var(--content-padding));
 }
 #rozvrh .background::after {
   content: "";
@@ -26,7 +25,7 @@
   z-index: 0;
   left: 0;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background: linear-gradient(270deg, rgba(22, 26, 29, 0.5) 0%, rgba(22, 26, 29, 0.6) 15%, rgba(22, 26, 29, 0.75) 25%, rgba(22, 26, 29, 0.9) 70%, rgba(22, 26, 29, 0.95) 100%);
 }
